agregue pestaña nosotros, botones en el index, modifique la posicion de las imagenes para que no se superpongan con la navbar al hacer hover

--- a/index.html
+++ b/index.html
@@ -48,10 +48,20 @@
         <div class="grid-1"><img src="./img/cruzat.png" alt="cruzat">  </div>
         <div class="grid-2"><img src="./img/desquiciado.png" alt="desquiciado"> </div>
         <div class="grid-3"><img src="./img/gauchezco.png" alt="gauchezco"></div>
-        <div class="grid-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam soluta cumque sit aspernatur nisi dignissimos consequatur ducimus delectus? Alias excepturi laudantium incidunt repellat labore animi iure sed veniam ea porro.</div>
-        <div class="grid-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sed nihil sunt, cumque, exercitationem repellat maxime laudantium quae recusandae illum architecto cum vitae? Possimus aperiam nisi, ullam necessitatibus quaerat nulla.</div>
-        <div class="grid-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos at nobis vel perspiciatis officiis totam ut nemo sint animi fugiat distinctio eius quas, illo corporis consequuntur eum porro velit ea.</div>
-
+        <div class="grid-4">Adquiriendo nuestra experiencia "Sparkling Wines" tendrás acceso a los mejores espumantes seleccionados por nuestro reconocido enólogo, Karim Mussi. Mediante una suscripción mensual te enviaremos una cuidadosa selección de 6 espumantes de las mejores bodegas de nuestro país   </div>
+        <div class="grid-5">Adquiriendo nuestra experiencia "Red Wines" tendrás acceso a los mejores vinos tintos del país seleccionados por una autoridad en el materia, el multi premiado enólogo Carlos Catena. Mediante una suscripción mensual te enviaremos una cuidadosa selección de 6 vinos iguales de bodegas boutique con pequeñas producciones.</div>
+        <div class="grid-6">Adquiriendo nuestra experiencia "Singular Selection" podrás hacerte acreedor a una selección de un mix de vinos jóvenes, amables al paladar. Estos vinos de categoría estan cuidadosamente pensados para aquellos que recién se inician en el hermoso camino del vino, de modo de poder conocer y degustar todo lo que ofrece nuestra tierra. </div>
+        <div class="grid-7">
+            
+                <button class="button-comprar" >Comprar</button>
+        </div>;
+        <div class="grid-8">
+                <button class="button-comprar" >Comprar</button>
+        </div>;
+        <div class="grid-9">
+        
+                <button class="button-comprar" >Comprar</button>
+        </div>;
     </main>
 
 
